--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: 
+      run: |
            echo "${{ secrets.DOCKERPW }}" | docker login -u "croguerrero" --password-stdin
            docker build . --file build/Dockerfile --tag croguerrero/webpage:$(date +%s)
            docker push croguerrero/webpage:$(date +%s)
