--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
         server_name _;
 
         location / {
-            proxy_pass http://localhost/;
+            allow all;
         }
     }
 }
